[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dapla-toolbelt-pseudo>=2.2.3",
    "matplotlib>=3.10.1",
    "memory-profiler>=0.61.0",
    "polars>=1.25.2",
]

[tool.pyright]
venv = ".venv"
venvPath = "."
